--- a/docs/source/代码编写规范.md
+++ b/docs/source/代码编写规范.md
@@ -2,11 +2,6 @@
 
 本部分文档专门记录代码编写规范，包含前端编写规范与后端编写规范。
 
-**目录**  
-
-- 前端
-- 后端
-
 ***
 
 ### 前端
@@ -71,3 +66,5 @@
 
 ### 后端
 
+后端使用了autopep8 autoflake isort若干工具组合起来规范代码风格，提供了`lint.sh`脚本，可以自动格式化代码。  
+这部分的操作与软工第一次小作业类似，不再赘述。  
