still updating documentation

--- a/docs/source/代码编写规范.md
+++ b/docs/source/代码编写规范.md
@@ -65,6 +65,6 @@
   禁止不必要的 `catch` 子句。
 
 ### 后端
-
 后端使用了autopep8 autoflake isort若干工具组合起来规范代码风格，提供了`lint.sh`脚本，可以自动格式化代码。  
-这部分的操作与软工第一次小作业类似，不再赘述。  
+鉴于采用了这些代码规范工具，后端的规范也为相应工具的规范。  
+进行后端编写时可以随时执行脚本以对代码自动规范格式。不过，由于这些工具的规范并不是完美的，所以在提交代码前需要自行检查代码格式是否规范。  
